/* 
  Localizable.strings
  Todododo

  Created by Wismin Effendi on 8/31/17.
  Copyright © 2017 Wismin Effendi. All rights reserved.
*/
"Today" = "Today";
"Tomorrow" = "Tomorrow";
"Yesterday" = "Yesterday";
"Two days ago" = "Two days ago";
"Two days from now" = "Two days from now";
"Future days in this week" = "Future days in this week";
"Next Week" = "Next Week";
"Two weeks from now" = "Two weeks from now";
"Previous days in this week" = "Previous days in this week";
"Last Week" = "Last Week";
"Two weeks ago" = "Two weeks ago";
"Sometime in the future" = "Sometime in the future";
"Sometime in the past" = "Sometime in the past";
"Choose Location" =  "Choose Location";
"Choose this location?" =  "Choose this location?";
"Cancel" =  "Cancel";
"OK" =  "OK";
"location found" =  "location found";
"locations found" =  "locations found";
"Task by location" =  "Task by location";
"Task by due date" =  "Task by due date";
"Archived Task" =  "Archived Task";
"Rename this new Task" =  "Rename this new Task";
"Dismiss" =  "Dismiss";
"Sync feature require iCloud account" = "Sync feature require iCloud account";
"Please login to iCloud for remote data sync." = "Please login to iCloud for remote data sync.";
"Please Upgrade" = "Please Upgrade";
"Free Version has limit of 20 tasks." = "Free Version has limit of 20 tasks.";
"Upgrade" = "Upgrade";
"Later" = "Later";
"Upgraded!" = "Upgraded!";
"Thanks for upgrading. You can use the full version." = "Thanks for upgrading. You can use the full version.";
"Restored!" = "Restored!";
"Your purchases have been restored. You can now use the full version." = "Your purchases have been restored. You can now use the full version.";
"Done" = "Done";
"Due" = "Due";
