...
        isArchivedView = true
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        tabBarController?.navigationItem.title = NavBarTitle.ArchivedTask
        settingsButton = UIBarButtonItem(image: #imageLiteral(resourceName: "settings"), style: .plain, target: self, action: #selector(ArchivedTaskTableViewController.settingTapped))
        tabBarController?.navigationItem.rightBarButtonItem = settingsButton
        isArchivedView = true 
        // select the first navigationItem
        selectFirstItemIfExist(archivedView: isArchivedView)
    }
    
...
