...
        addBarButton = nil
        tabBarController?.navigationItem.rightBarButtonItem = nil
        addBarButton = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(TaskTableViewController.addNewTaskTapped))
        tabBarController?.navigationItem.rightBarButtonItem = addBarButton
        addBarButton.isEnabled = true
        addBarButton.isAccessibilityElement = true
        addBarButton.accessibilityLabel = "Add"
    }
    
    

    override func viewWillDisappear(_ animated: Bool) {
        super.viewWillDisappear(animated)
...
